# cryptopal-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: lib.rs  oracle.rs  pkcs.rs  profile.rs  util.rs  xor.rs
src/oracle/: cbc_ecb_oracle.rs  cbc_target_oracle.rs  mod.rs  profile.rs  profile_oracle.rs  random_prefix_target_suffix_ecb_oracle.rs  unknown_suffix_ecb_oracle.rs
