[package]
name = "cryptopal"
version = "0.1.0"
authors = ["Patrick O'Doherty <p@trickod.com>"]

[dependencies]
aes = "0.7"
base64 = "0.12.0"
block-modes = "0.8"
data-encoding-macro = "0.1"
hex = "0.4.0"
itertools = "0.9"
openssl = "^0.10"
rand = "^0.7"
rust-crypto = "^0.2"
difference = "2.0.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
openssl = "0.10"
rand = "0.7"
rust-crypto = "0.2"
